--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>App</title>
+  <title>TodoroApp</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
+	<% if logged_in? %>
+		<p>Logged in as: <%= @current_user.username %></p>
+		<%= button_to 'Log Out', '/session', :method => :delete %>
+	<% end %>
+
+	<% if flash[:errors] %>
+    <% flash[:errors].each do |error| %>
+  		<p><%= error %></p>
+      <% end %>
+	<% end %>
 
 <%= yield %>
 
