--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,15 @@
 <body>
   
 	<% if logged_in? %>
-		<p>Logged in as: <%= @current_user.username %></p>
-		<%= button_to 'Log Out', '/session', :method => :delete %>
+		<span>
+      Logged in as: <%= @current_user.username %>
+      <%= link_to 'Log Out', session_url, :method => :delete %>
+    </span>
+  <% else %>
+    <span>
+      <%= link_to 'Log in', new_session_url%>
+      <%= link_to 'Sign up', new_user_url%>
+    </span>
 	<% end %>
 
 	<% if flash[:errors] %>
