--- a/app/views/dashboards/show.html.erb
+++ b/app/views/dashboards/show.html.erb
@@ -8,7 +8,6 @@
 <script type="application/javascript">
 $(function () {
   var lists = JSON.parse($("#bootstrapped_lists").html()).lists;
-  console.log(lists);
-  window.App.initialize($('body'), lists);
+  window.App.initialize($('.content'), lists);
 });
 </script>
