--- a/app/assets/templates/lists/index.jst.ejs
+++ b/app/assets/templates/lists/index.jst.ejs
@@ -1,7 +1,17 @@
+
 <ul>
-<% lists.each(function(list) { %>
-<li class="list">
-  <%= list.escape('title') %>
-</li>
-<% }); %>
+  <br>
+  <% lists.each(function(list) { %>
+    <li id="list <%= list.id %>">
+      <%= list.escape('title') %>
+      <a href="/#" class="remove" data-id="<%= list.id %>">Delete</a>
+    </li>
+  <% }); %>
 </ul>
+
+<form>
+  <input type="text" name="list[title]">
+  <br>
+  <input type="submit" class="new" value="Add New List">
+</form>
+
