--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,14 @@
 
 <%= yield %>
 
-<div class="content"></div>
+<div class="container">
+  <div class="navbar"></div>
+  <div class="sidebar"></div>
+  <div class="current-list">Current</div>
+  <div class="today-list">Today</div>
+  <div class="unplanned-list">Unplanned</div>
+  <div class="footer"></div>
+</div>
 
 </body>
 </html>
