Add RABL to modify outputted json

--- a/app/assets/templates/lists/item.jst.ejs
+++ b/app/assets/templates/lists/item.jst.ejs
@@ -1,4 +1,4 @@
 <td data-id="<%= list.id %>">
-  <%= list.escape('title') %>
-  <a href="/#" class="remove" data-id="<%= list.id %>">Delete</a>
+  <a href="/#" class="open"><%= list.escape('title') %></a>
+  <a href="/#" class="remove">Delete</a>
 </td>
