--- a/app/assets/templates/lists/item.jst.ejs
+++ b/app/assets/templates/lists/item.jst.ejs
@@ -1,4 +1,4 @@
 <td data-id="<%= list.id %>">
-  <a href="/#" class="open"><%= list.escape('title') %></a>
-  <a href="/#" class="remove">Delete</a>
+  <a href="#" class="open"><%= list.escape('title') %></a>
+  <a href="#" class="remove">Delete</a>
 </td>
