--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,16 @@
 
 <div class="container">
   <div class="navbar"></div>
-  <div class="sidebar"></div>
-  <div class="current-list">Current</div>
-  <div class="today-list">Today</div>
-  <div class="unplanned-list">Unplanned</div>
-  <div class="footer"></div>
+  <% if logged_in? %>
+    <div class="sidebar"></div>
+    <div class="current-list">
+      Current
+      <div class="current-list-tasks"></div>
+    </div>
+    <div class="today-list">Today</div>
+    <div class="unplanned-list">Unplanned</div>
+    <div class="footer"></div>
+  <% end %>
 </div>
 
 </body>
