--- a/app/assets/templates/tasks/item.jst.ejs
+++ b/app/assets/templates/tasks/item.jst.ejs
@@ -1,10 +1,13 @@
+<% var todayStatus = task.get("today") ? true : false %>
+
 <td data-id="<%= task.id %>">
-  <%= task.escape('title') %>
+  <%= task.escape("title") %>
   <a href="#" class="task-remove">Delete</a>
-  <% if (task.escape('today')) { %>
-    <a href="#" class="add-today">Not Today</a>
+  <% if (todayStatus) { %>
+    <a href="#" class="remove-today">Not Today</a>
   <% } else { %>
-    <a href="#" class="remove-today">Today</a>
+    <a href="#" class="add-today">Today</a>
   <% } %>
+  <%= task.get('today') %>
 </td>
   
