Setup Basic Today View

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,10 @@
       Current
       <div class="current-list-tasks"></div>
     </div>
-    <div class="today-list">Today</div>
+    <div class="today-list">
+      Today
+      <div class="today-list-tasks"></div>
+    </div>
     <div class="unplanned-list">Unplanned</div>
     <div class="footer"></div>
   <% end %>
