Implement Adding/Removing to Today List

--- a/app/assets/templates/tasks/item.jst.ejs
+++ b/app/assets/templates/tasks/item.jst.ejs
@@ -6,5 +6,6 @@
   <span class="do <%= todayStatus %>" data-id="<%= task.id %>">
     <a href="#" class="do-later">Not Today</a>
     <a href="#" class="do-today">Today</a>
+  </span>
 </td>
   
