--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,11 @@
     <div class="sidebar"></div>
     <div class="current-list">
       Current
-      <div class="current-list-tasks"></div>
+      <div class="current-tasks"></div>
     </div>
     <div class="today-list">
       Today
-      <div class="today-list-tasks"></div>
+      <div class="today-tasks"></div>
     </div>
     <div class="unplanned-list">Unplanned</div>
     <div class="footer"></div>
