Fix today flagging bugs

--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -2,7 +2,7 @@
 
 <td data-id="<%= task.id %>">
   <%= task.escape("title") %>
-  <a href="#" class="task-remove">Delete</a>
+  <a href="#" class="remove-task">Delete</a>
   <span class="do <%= todayStatus %>" data-id="<%= task.id %>">
     <a href="#" class="do-later">Not Today</a>
     <a href="#" class="do-today">Today</a>
