Add Basic Styling

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,7 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+ *= require jquery-ui-custom
  *= require_self
  *= require_tree .
  */
@@ -36,4 +37,8 @@ body {
 
 .current-list tr {
   text-align: left;
+}
+
+.hidden {
+  display: none;
 }
