--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -1,11 +1,38 @@
-<h2>Lists</h2>
+<!-- Show List Form Button-->
+<button id="show-list-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
+  <span class="ui-button-text">Add New List</span>
+</button>
+
+<div id="list-utility" class="hidden">
+  <form id="list-form" style="float: left">
+    <input type="text" name="list[title]">
+    <!-- Add Task Button -->
+    <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id="submit-form" style="font-size: 8px">
+      <span class="ui-icon ui-icon-plus"></span>
+    </button>
+  </form>
+  <!-- Remove Form Button -->
+  <button class="ui-state-default ui-corner-all" title=".ui-icon-close" id="remove-form" style="font-size: 8px; float: left ">
+    <span class="ui-icon ui-icon-close"></span>
+  </button>
+</div>
+
 <table>
   <!-- child content will be rendered here -->
 </table>
 
-<form>
-  <input type="text" name="list[title]">
-  <br>
-  <input type="submit" class="new" value="Add New List">
-</form>
+<script>
+  $('button').button();
+  // Display Add Task Form
+  $('#show-list-form').click(function() {
+    $('#show-list-form').addClass('hidden');
+    $('#list-utility').removeClass('hidden');
+  });
+  // Remove Add Task Form
+  $('#remove-form').click(function() {
+    $('#list-utility').addClass('hidden');
+    $('#show-list-form').removeClass('hidden');
+  })
+</script>
+
 
