--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,8 @@
 <div class="container">
   <div class="navbar"></div>
   <% if logged_in? %>
-    <div class="sidebar"></div>
+    <div class="sidebar">
+    </div>
     <div class="current-list">
       Current
       <div class="current-tasks"></div>
