--- a/app/assets/templates/tasks/tasks_view.jst.ejs
+++ b/app/assets/templates/tasks/tasks_view.jst.ejs
@@ -1,9 +1,38 @@
-<form>
-  <input type="text" name="task[title]">
-  <br>
-  <input type="submit" class="add-new-task" value="Add New Task">
-</form>
+<!-- Show Task Form Button-->
+<button id="show-task-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
+  <span class="ui-button-text">Add New Task</span>
+</button>
+
+</span>
+<div id="task-utility" class="hidden">
+  <form id="task-form" style="float: left">
+    <!-- Task Name -->
+    <input type="text" name="task[title]">
+    <!-- Add Task Button -->
+    <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id ="submit-form" style="font-size: 8px">
+      <span class="ui-icon ui-icon-plus"></span>
+    </button>
+  </form>
+  <!-- Remove Form Button -->
+  <button class="ui-state-default ui-corner-all" title=".ui-icon-close" id="remove-form" style="font-size: 8px; float: left ">
+    <span class="ui-icon ui-icon-close"></span>
+  </button>
+</div>
 
 <table>
   <!-- render tasks views here -->
 </table>
+
+<script>
+  $('button').button();
+  // Display Add Task Form
+  $('#show-task-form').click(function() {
+    $('#show-task-form').addClass('hidden');
+    $('#task-utility').removeClass('hidden');
+  });
+  // Remove Add Task Form
+  $('#remove-form').click(function() {
+    $('#task-utility').addClass('hidden');
+    $('#show-task-form').removeClass('hidden');
+  })
+</script>
