--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -1,3 +1,5 @@
+Lists
+<br>
 <!-- Show List Form Button-->
 <button id="show-list-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
   <span class="ui-button-text">Add New List</span>
