--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,17 +31,10 @@
 <div class="container">
   <div class="navbar"></div>
   <% if logged_in? %>
-    <div class="sidebar">
-    </div>
-    <div class="current-list">
-      Current
-      <div class="current-tasks"></div>
-    </div>
-    <div class="today-list">
-      Today
-      <div class="today-tasks"></div>
-    </div>
-    <div class="unplanned-list">Unplanned</div>
+    <div class="sidebar"></div>
+    <div class="current-tasks"></div>
+    <div class="today-tasks"></div>
+    <div class="unplanned-tasks">Unplanned</div>
     <div class="footer"></div>
   <% end %>
 </div>
