--- a/app/assets/templates/tasks/tasks_view.jst.ejs
+++ b/app/assets/templates/tasks/tasks_view.jst.ejs
@@ -1,40 +1,53 @@
 <!-- Show Task Form Button-->
-Current List: <%= listTitle %>
+List: <%= listTitle %>
 <br>
 <button id="show-task-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
   <span class="ui-button-text">Add New Task</span>
 </button>
 
 </span>
-<div id="task-utility" class="hidden">
-  <form id="task-form" style="float: left">
+<div id="task-utility" class="hidden clearfix">
+  <form id="task-form">
     <!-- Task Name -->
     <input type="text" name="task[title]">
     <!-- Add Task Button -->
-    <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id ="submit-form" style="font-size: 8px">
+    <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id="submit-task-form">
       <span class="ui-icon ui-icon-plus"></span>
     </button>
   </form>
   <!-- Remove Form Button -->
-  <button class="ui-state-default ui-corner-all" title=".ui-icon-close" id="remove-form" style="font-size: 8px; float: left ">
+  <button class="ui-state-default ui-corner-all" title=".ui-icon-close" id="remove-task-form">
     <span class="ui-icon ui-icon-close"></span>
   </button>
 </div>
 
-<table>
-  <!-- render tasks views here -->
-</table>
+<div style="clear: both;"></div>
+
+<div id="task-content">
+  <table>
+    <!-- render tasks views here -->
+  </table>
+</div>
+
+<style>
+  #show-task-form { font-size: 12px; color: #cc0000; }
+  #task-form { float: left; }
+  #submit-task-form { font-size: 8px; }
+  #remove-task-form { font-size: 8px; float: left; }
+</style>
 
 <script>
-  $('button').button();
-  // Display Add Task Form
-  $('#show-task-form').click(function() {
-    $('#show-task-form').addClass('hidden');
-    $('#task-utility').removeClass('hidden');
+  $(function() {
+    $('button').button();
+    // Display Add Task Form
+    $('#show-task-form').click(function() {
+      $('#show-task-form').addClass('hidden');
+      $('#task-utility').removeClass('hidden');
+    });
+    // Remove Add Task Form
+    $('#remove-task-form').click(function() {
+      $('#task-utility').addClass('hidden');
+      $('#show-task-form').removeClass('hidden');
+    });
   });
-  // Remove Add Task Form
-  $('#remove-form').click(function() {
-    $('#task-utility').addClass('hidden');
-    $('#show-task-form').removeClass('hidden');
-  })
 </script>
