--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -29,7 +29,7 @@ Lists
   #show-list-form { font-size: 12px; color: #cc0000; }
   #list-form { float: left; }
   #submit-task-form { font-size: 8px; }
-  #remove-list-form { font-size: 8px; float: left }
+  #remove-list-form { font-size: 8px; float: left });
 </style>
 
 <script>
