Major Fixes. Code cleanup. Barebones edit functionality

--- a/app/assets/templates/lists/lists_item.jst.ejs
+++ b/app/assets/templates/lists/lists_item.jst.ejs
@@ -2,36 +2,6 @@
   <a href="#" class="open-list"><%= list.escape('title') %></a>
   <!-- Remove List -->
   <a href="#" class="hidden remove-list" id="remove-list-item">
-    <span class="ui-icon ui-icon-closethick" data-id="<%= list.id %>" id="delete-list"></span>
+    <span class="ui-icon ui-icon-closethick delete-list" data-id="<%= list.id %>" id="delete-list"></span>
   </a>
 </span>
-
-<!-- <li class="ui-state-default ui-corner-all" title=".ui-icon-closethick"><span class="ui-icon ui-icon-closethick"></span></li> -->
-
-<style>
-  li {
-    list-style-type: none;
-    margin-top: 10px;
-    margin-right: 20px;
-    margin-left: -10px;
-    margin-bottom: -5px;
-    padding: 15px;
-    font-size: 1.0em; 
-    height: 1.0em; 
-  }
-  .open-list { float: left; }
-  #delete-list { float: right; }
-</style>
-
-<script>
-  // Hover effect to display delete button
-  // .list-item comes from list_item.js
-  $(".list-item").hover(
-    function() {
-      $(this).removeClass("ui-state-default").addClass("ui-state-hover");
-      $(this).find(".remove-list").removeClass("hidden"); },
-    function() {
-      $(this).removeClass("ui-state-hover").addClass("ui-state-default"); 
-      $(this).find(".remove-list").addClass("hidden"); }
-  );
-</script>
