--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -1,36 +1,34 @@
 <% var todayStatus = task.get("today") ? "today" : "later" %>
 <% var completeStatus = task.get("complete") ? "complete" : "incomplete" %>
 
-<td data-id="<%= task.id %>">
-  <span class="task-<%= completeStatus %>">
-    <input type="checkbox" class="task-checked"
-                           data-id="<%=task.id %>" checked>
-    <input type="checkbox" class="task-unchecked"
-                           data-id="<%=task.id %>">
-    <%= task.escape("title") %>
-  </span>
+<!-- Checkboxes -->
+<span class="task-<%= completeStatus %>">
+  <input type="checkbox" class="task-checked"
+                         data-id="<%=task.id %>" checked>
+  <input type="checkbox" class="task-unchecked"
+                         data-id="<%=task.id %>">
+</span>
+
+<!-- Task Title -->
+<span class="task-<%=completeStatus %> task-title">
+  <%= task.escape("title") %>
+</span>
+
+<span class="task-options">
+  <!-- Edit -->
+  <a href="#" class="task-edit-link" data-id="<%= task.id %>">Edit</a>
+
+  <!-- Remove Task -->
   <a href="#" class="list-remove-task" data-id="<%= task.id %>">Delete</a>
+
+  <!-- doLater/doToday -->
   <span class="<%= todayStatus %>">
     <a href="#" class="list-do-later" data-id="<%= task.id %>">Not Today</a>
     <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
   </span>
-</td>
-  
-<style>
-  .today .list-do-today {
-    display: none;
-  }
-
-  .later .list-do-later {
-    display: none;
-  }
-  
-  .task-complete {
-    text-decoration: line-through;
-    color: grey;
-  }
-  
-  .task-complete .task-unchecked { display: none; }
-  .task-incomplete .task-checked { display: none; }
-  
-</style>
+</span>
+<!-- Edit Form -->  
+<input type="text" 
+       data-id="<%= task.id %>"
+       class="task-edit-form hidden"
+       value="<%= task.escape('title') %>">
