--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -1,34 +1,41 @@
 <% var todayStatus = task.get("today") ? "today" : "later" %>
 <% var completeStatus = task.get("complete") ? "complete" : "incomplete" %>
 
+<td>
 <!-- Checkboxes -->
-<span class="task-<%= completeStatus %>">
-  <input type="checkbox" class="task-checked"
-                         data-id="<%=task.id %>" checked>
-  <input type="checkbox" class="task-unchecked"
-                         data-id="<%=task.id %>">
-</span>
-
-<!-- Task Title -->
-<span class="task-<%=completeStatus %> task-title">
-  <%= task.escape("title") %>
-</span>
-
-<span class="task-options">
-  <!-- Edit -->
-  <a href="#" class="task-edit-link" data-id="<%= task.id %>">Edit</a>
-
-  <!-- Remove Task -->
-  <a href="#" class="list-remove-task" data-id="<%= task.id %>">Delete</a>
-
-  <!-- doLater/doToday -->
-  <span class="<%= todayStatus %>">
-    <a href="#" class="list-do-later" data-id="<%= task.id %>">Not Today</a>
-    <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
+  <span class="task-<%= completeStatus %>">
+    <input type="checkbox" class="task-checked"
+                           data-id="<%=task.id %>" checked>
+    <input type="checkbox" class="task-unchecked"
+                           data-id="<%=task.id %>">
   </span>
-</span>
-<!-- Edit Form -->  
-<input type="text" 
-       data-id="<%= task.id %>"
-       class="task-edit-form hidden"
-       value="<%= task.escape('title') %>">
+
+  <!-- Task Title -->
+  <span class="task-<%=completeStatus %> task-title">
+    <%= task.escape("title") %>
+  </span>
+
+  <span class="task-options">
+    <!-- Edit -->
+    <a href="#" class="task-edit-link" data-id="<%= task.id %>">Edit</a>
+
+    <!-- Remove Task -->
+    <a href="#" class="list-remove-task" data-id="<%= task.id %>">Delete</a>
+
+    <!-- doLater/doToday -->
+    <span class="<%= todayStatus %>">
+      <a href="#" class="list-do-later" data-id="<%= task.id %>">Not Today</a>
+      <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
+    </span>
+  </span>
+</td>
+<!-- Edit Form -->
+<td>
+  <form class="task-edit" data-id="<%= task.id %>">
+    <input type="text" 
+           data-id="<%= task.id %>"
+           name="task[title]"
+           class="task-edit-form hidden"
+           value="<%= task.escape('title') %>">
+  </form>
+</td>
