Refactor Today View using taskView and viewType

--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -25,7 +25,9 @@
     <!-- doLater/doToday -->
     <span class="<%= todayStatus %>">
       <a href="#" class="list-do-later" data-id="<%= task.id %>">Not Today</a>
-      <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
+      <% if (viewType !== "todayView") { %>
+        <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
+      <% } %>
     </span>
   </span>
 </td>
