Implement Complete/Pending Counts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,6 @@ body {
   text-align: left;
 }
 
-.hidden {
-  display: none;
-}
+/* Helpers */
+.clearfix { clear: both; }
+.hidden { display: none; }
