--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
   <div class="navbar"></div>
   <% if logged_in? %>
     <div class="sidebar"></div>
-    <div class="current-list-container">Current
+    <div class="current-list-container">
       <div class="current-tasks"></div>
     </div>
     <div class="today-tasks"></div>
