--- a/app/assets/templates/tasks/tasks_view.jst.ejs
+++ b/app/assets/templates/tasks/tasks_view.jst.ejs
@@ -1,46 +1,59 @@
+<div id="overall-info" style="float: left; text-align: left">
+  <!-- Completed Task Count -->
+  <% var completedTasks = _.where(tasks.toJSON(), {complete: true}).length; %>
+  <!-- Pending Task Count -->
+  <% var pendingTasks = _.where(tasks.toJSON(), {complete: false}).length; %>
 
-<% if (viewType === "tasksView")  { %>
-List: <%= listTitle %>
-<% } else if (viewType === "todayView") { %>
-Today
-<% } else { %>
-Unplanned
-<% } %>
-<br>
-
-<% if (viewType === "tasksView")  { %>
-<!-- Add Task Button -->
-<button id="show-task-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
-  <span class="ui-button-text">Add New Task</span>
-</button>
-
-
-<!-- Add Task Form -->
-<div id="task-utility" class="hidden clearfix">
-  <form id="task-form">
-    <!-- Task Name -->
-    <input type="text" name="task[title]">
-    
-    <!-- Add Task Button -->
-    <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id="submit-task-form">
-      <span class="ui-icon ui-icon-plus"></span>
-    </button>
-  </form>
-  
-    <!-- Remove Form Button -->
-  <button class="ui-state-default ui-corner-all" title=".ui-icon-close"
-          id="remove-task-form">
-    <span class="ui-icon ui-icon-close"></span>
-  </button>
+  Tasks Complete: <%= completedTasks %>
+  <br>
+  Tasks Pending: <%= pendingTasks %>
+  <br><br>
 </div>
 
-<% } %>
+<div class="clearfix">
+  <% if (viewType === "tasksView")  { %>
+  List: <%= listTitle %>
+  <% } else if (viewType === "todayView") { %>
+  Today
+  <% } else { %>
+  Unplanned
+  <% } %>
+  <br>
 
-<!-- Clear Floats -->
-<div style="clear: both;"></div>
+  <% if (viewType === "tasksView")  { %>
+  <!-- Add Task Button -->
+  <button id="show-task-form" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only" role="button" aria-disabled="false" style="font-size: 12px; color: #cc0000">
+    <span class="ui-button-text">Add New Task</span>
+  </button>
 
-<!-- render tasks views here -->
-<div id="task-content">
+
+  <!-- Add Task Form -->
+  <div id="task-utility" class="hidden clearfix">
+    <form id="task-form">
+      <!-- Task Name -->
+      <input type="text" name="task[title]">
+    
+      <!-- Add Task Button -->
+      <button class="ui-state-default ui-corner-all" title=".ui-icon-plusthick" id="submit-task-form">
+        <span class="ui-icon ui-icon-plus"></span>
+      </button>
+    </form>
+  
+      <!-- Remove Form Button -->
+    <button class="ui-state-default ui-corner-all" title=".ui-icon-close"
+            id="remove-task-form">
+      <span class="ui-icon ui-icon-close"></span>
+    </button>
+  </div>
+
+  <% } %>
+
+  <!-- Clear Floats -->
+  <div class="clearfix"></div>
+
+  <!-- render tasks views here -->
+  <div id="task-content">
+  </div>
 </div>
 
 <style>
