Add achieved and expected pomodoros. Fix bugs

--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -29,6 +29,8 @@
         <a href="#" class="list-do-today" data-id="<%= task.id %>">Today</a>
       <% } %>
     </span>
+    <!-- Actual/Expected Pomodoros -->
+    <%= task.get("pomodoro_actual")%>/<%= task.get("pomodoro_expected")%>
   </span>
 </td>
 <!-- Edit Form -->
