--- a/app/assets/templates/lists/lists_view.jst.ejs
+++ b/app/assets/templates/lists/lists_view.jst.ejs
@@ -1,24 +1,51 @@
 <% if (lists.toJSON().length > 0)  { %>
   <div id="overall-info" style="float: left; text-align: left">
-    <!-- Completed Task Count -->
-    <% var taskCountComplete = _.map(lists.toJSON(), function(list) { 
-      return _.where(list.tasks, {complete: true}).length 
-      }); %>
-    <% var completedTasks = _.reduce(taskCountComplete, function(memo, num){ 
-      return memo+num 
-      }); %>
-    <!-- Pending Task Count -->
-    <% var taskCountPending = _.map(lists.toJSON(), function(list) { 
-      return _.where(list.tasks, {complete: false}).length 
-      }); %>
-    <% var pendingTasks = _.reduce(taskCountPending, function(memo, num){ 
-      return memo+num 
-      }); %>
+    <div id="date-info">
+      <!-- Date Info -->
+      <% var now = new Date() %>
+      <% var days = ['Sunday','Monday','Tuesday','Wednesday','Thursday',
+      'Friday','Saturday']; %>
+      <% var months = ['January','February','March','April','May','June','July',
+      'August','September','October','November','December']; %>
 
-    Tasks Complete: <%= completedTasks %>
-    <br>
-    Tasks Pending: <%= pendingTasks %>
-    <br><br>
+      <%= months[ now.getMonth() ] %> <%= now.getDate() %>
+      <br>
+      <%= days[ now.getDay() ] %>
+      <br><br>
+    </div>
+    <div id="task-info">
+      <!-- Completed Task Count -->
+      <% var taskCountComplete = _.map(lists.toJSON(), function(list) { 
+        return _.where(list.tasks, {complete: true}).length 
+        }); %>
+      <% var completedTasks = _.reduce(taskCountComplete, function(memo, num){ 
+        return memo+num 
+        }, 0); %>
+      
+      <!-- Pending Task Count -->
+      <% var taskCountPending = _.map(lists.toJSON(), function(list) { 
+        return _.where(list.tasks, {complete: false}).length 
+        }); %>
+      <% var pendingTasks = _.reduce(taskCountPending, function(memo, num){ 
+        return memo+num 
+        }, 0); %>
+      
+        <!-- Pomdoros Achieved -->
+      <% var pomodorosCount = _.flatten(_.map(lists.toJSON(), function(list) {
+        return _.map(list.tasks, function(task) { return task.pomodoro_actual }) 
+          })
+        ); %>
+      <% var pomodorosAchieved = _.reduce(pomodorosCount, function(memo, num){ 
+        return memo+num 
+        }, 0); %>
+      
+      Tasks Complete: <%= completedTasks %>
+      <br>
+      Tasks Pending: <%= pendingTasks %>
+      <br>
+      Pomodoros Achieved: <%= pomodorosAchieved %>
+      <br><br>
+    </div>
   </div>
 <% } %>
 
