--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -16,6 +16,9 @@
   </span>
 
   <span class="task-options">
+    <% if (viewType === "todayView") { %>
+      <a href="#" class="task-open-timer" data-id="<%= task.id %>">Start</a>
+    <% } %>
     <!-- Edit -->
     <a href="#" class="task-edit-link" data-id="<%= task.id %>">Edit</a>
 
@@ -43,3 +46,18 @@
            value="<%= task.escape('title') %>">
   </form>
 </td>
+
+<!-- Timer Box -->
+<td>
+  <div class="timer-window hidden">
+    <div class="timer-content">
+      I'm a timer box!
+      <div id="timer-time">25:00</div>
+      <br>
+      <a href="#" class="task-begin-timer" data-id="<%= task.id %>">Start</a>
+      <a href="#" class="task-stop-timer" data-id="<%= task.id %>">Reset</a>
+      <a href="#" class="task-close-timer" data-id="<%= task.id %>">Close</a>
+    </div class="timer-content">
+  </div>
+</td>
+
