Implement new Timer

--- a/app/assets/templates/tasks/tasks_item.jst.ejs
+++ b/app/assets/templates/tasks/tasks_item.jst.ejs
@@ -52,10 +52,10 @@
   <div class="timer-window hidden">
     <div class="timer-content">
       I'm a timer box!
-      <div id="timer-time">25:00</div>
+      <div class="timer-time">25:00</div>
       <br>
       <a href="#" class="task-begin-timer" data-id="<%= task.id %>">Start</a>
-      <a href="#" class="task-stop-timer" data-id="<%= task.id %>">Reset</a>
+      <a href="#" class="task-reset-timer" data-id="<%= task.id %>">Reset</a>
       <a href="#" class="task-close-timer" data-id="<%= task.id %>">Close</a>
     </div class="timer-content">
   </div>
